metrics/kubernetes/aws-demo/promtail.yaml

apiVersion: v1
kind: Service
metadata:
  name: metrics-promtail
  namespace: default
  labels:
    app.kubernetes.io/name: metrics-promtail
spec:
  ports:
    - name: promtail-port
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app.kubernetes.io/name: metrics-promtail

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-promtail
  namespace: default
  labels:
    app.kubernetes.io/name: metrics-promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-promtail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metrics-promtail
    spec:
      volumes:
        - name: metrics-promtail-config
          configMap:
            name: metrics-promtail
            items:
              - key: promtail-local-config.yaml
                path: promtail-local-config.yaml
        - name: metrics-promtail-data
          persistentVolumeClaim:
            claimName: metrics-buccaneer
      containers:
        - name: metrics-promtail
          image: grafana/promtail
          args: 
            - -config.file=/etc/promtail/promtail-local-config.yaml
          volumeMounts:
            - name: metrics-promtail-config
              mountPath: /etc/promtail/
            - name: metrics-promtail-data
              mountPath: /EventsServer
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
                  - key: sps.tensorworks.com.au/cpu
                    operator: In
                    values:
                      - 'true'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
